--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,12 @@
 @import url(fonts.css);
 
 
+body {
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -307,7 +313,7 @@ div.promo {
     max-width: 100%; /* Volledige breedte */
     flex: 0 0 100%; /* Blokken onder elkaar */
   }
-}}
+}
 
 div.example {
     background-color: white;
@@ -334,12 +340,6 @@ div.header h1 {
   opacity: 80%;
   margin-bottom: 10px;
   border-radius: 10px;
-}
-
-/* Styling voor de tekst in de box */
-.text {
-    padding: 20px;
-    background-color: yellow; /* Standaard achtergrondkleur is geel */
 }
 
  h2 {
@@ -713,6 +713,7 @@ p {
 
 /* Family */
 
+
 <!-- Algemene reset -->
 * {
     margin: 0;
@@ -720,11 +721,75 @@ p {
     box-sizing: border-box;
 }
 
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    padding: 10px 0;
+    z-index: 1000;
+    height:55px;
+}
+
+.navbar ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+}
+
+.navbar ul li {
+    margin: 0 15px;
+}
+
+.navbar ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+    padding: 10px;
+}
+
+.navbar ul li a:hover {
+    background-color: #575757;
+    border-radius: 5px;
+}
+
+.section-header {
+    font-size: 2rem;
+    text-align: left;
+    margin: 10px 0;
+    color: #333;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    width: 100vw; /* Volle breedte van de viewport */
+    background-color: #f8f8f8; /* Optionele achtergrondkleur */
+    display: block;
+    margin-top: 20px; /* Zorgt ervoor dat de secties niet onder de navbar verdwijnen */
+    padding-left: 20px;
+    font-family:"Upgrade Bold", Fallback;
+}
+
+.sub-header {
+    font-size: 1.8rem;
+    text-align: left;
+    color: #333;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    width: 100vw; /* Volle breedte van de viewport */
+    background-color: #f8f8f8; /* Optionele achtergrondkleur */
+    display: block;
+    padding-left: 20px;
+    font-family:"Upgrade Light", Fallback;
+}
+
+
+
 /* Hero Image */
 .hero-image {
     position: relative;
     width: 100%;
-    height: 500px;
+    height: 700px;
     background-image: url('https://via.placeholder.com/1920x500');
     background-size: cover;
     background-position: center;
@@ -776,8 +841,6 @@ p {
     font-size: 1rem;
 }
 
-
-
 .cta-btn {
     padding: 10px 20px;
     background-color: #007bff;
@@ -791,15 +854,17 @@ p {
 .container-grid.square {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Drie kolommen */
-    gap: 10px;
-    background-color: #c6f6d5; /* Lichtgroene achtergrondkleur */
-    height: 200px;
+    gap: 0px;
+    background-color: red; /* Lichtgroene achtergrondkleur */
+    height: 400px;
+    border: solid 1px white; 
 }
 
 .grid-item {
     position: relative;
     background-color: #ffffff;
     overflow: hidden; /* Verbergt alles buiten het masker */
+    border: solid 1px white; 
 }
 
 .image-overlay {
@@ -837,7 +902,6 @@ p {
 .number-item {
     text-align: center;
     background-color: #c6f6d5; /* Lichtgroene achtergrondkleur */
-    height: 200px;
     width: 23%;
     display: flex; /* Flexbox gebruiken om de inhoud te centreren */
     flex-direction: column; /* Zorgt ervoor dat de inhoud verticaal gestapeld wordt */
@@ -864,17 +928,38 @@ p {
 .three-columns {
     display: flex;
     justify-content: space-between;
-    background-color: #c6f6d5;
-    padding: 20px;
+    background-color: #f6f6f6;
+    padding:0px;
 }
 
 .column {
-    background-color: #ffffff;
-    width: 30%;
-    padding: 10px;
-    text-align: center;
+  background-color: white;
+  width: 33.3%;
+  float:left;
+  text-align: left;
+  margin:10px;
+  text-overflow: hidden;
+  border: solid 1px gray; 
 }
 
+.column h2 {
+  display: inline-block;
+  float: left;
+  font-family:"Upgrade Medium", Fallback;
+}
+
+.column p {
+  display: inline-block;
+  float: left;
+  width:100%;
+  font-family:"Upgrade Regular", Fallback;
+  font-size: 30pt;
+  line-height: 27pt;
+}
+
+.def{
+  color:lightgray;
+}
 .heading {
     font-size: 1.5rem;
     font-weight: bold;
@@ -915,6 +1000,7 @@ p {
     font-size: 1rem;
 }
 
+
 /* Animatie Fade-In */
 @keyframes fadeIn {
     0% {
@@ -924,3 +1010,98 @@ p {
         opacity: 1;
     }
 }
+
+@media screen and (max-width: 1200px) {
+  /* Maak de drie kolommen onder elkaar in plaats van naast elkaar */
+  .three-columns, .container-grid.square, .number-block  {
+    display: block; /* Zet de drie kolommen onder elkaar */
+    padding:0px;
+    height:45%;
+  }
+
+  .three-columns, .container-grid.square, .number-block {
+    display: block; /* Zet de drie kolommen onder elkaar */
+    padding:0px;
+  }
+
+  .column, .grid-item, .number-item {
+    width: 45%; /* Zorgt ervoor dat de kolommen de volledige breedte innemen */
+    margin-bottom: 20px; /* Ruimte tussen de kolommen */
+    text-align: center; /* Optioneel, om tekst in het midden te plaatsen */
+  }
+
+  /* Voor de twee kolommen met 70% en 30% */
+  .two-columns-70 {
+    display: block; /* Zet de twee kolommen onder elkaar */
+  }
+
+  .two-columns-70 .column {
+    width: 45%; /* Beide kolommen nemen de volledige breedte */
+    margin-bottom: 20px; /* Ruimte tussen de kolommen */
+  }
+}
+
+@media screen and (max-width: 700px) {
+  /* Maak de drie kolommen onder elkaar in plaats van naast elkaar */
+  .three-columns, .container-grid.square, .number-block  {
+    display: block; /* Zet de drie kolommen onder elkaar */
+    padding:0px;
+    height:100%;
+  }
+
+  .three-columns, .container-grid.square, .number-block {
+    display: block; /* Zet de drie kolommen onder elkaar */
+    padding:0px;
+  }
+
+  .column, .grid-item, .number-item {
+    width: 100%; /* Zorgt ervoor dat de kolommen de volledige breedte innemen */
+    margin-bottom: 20px; /* Ruimte tussen de kolommen */
+    text-align: center; /* Optioneel, om tekst in het midden te plaatsen */
+  }
+
+  /* Voor de twee kolommen met 70% en 30% */
+  .two-columns-70 {
+    display: block; /* Zet de twee kolommen onder elkaar */
+  }
+
+  .two-columns-70 .column {
+    width: 100%; /* Beide kolommen nemen de volledige breedte */
+    margin-bottom: 20px; /* Ruimte tussen de kolommen */
+  }
+}
+
+
+.liga{
+  font-feature-settings: "liga"
+}
+
+.frac{
+  font-feature-settings: "frac"
+}
+
+.tnum{
+  font-feature-settings: "tnum"
+}
+
+.onum{
+  font-feature-settings: "onum"
+}
+
+.sups{
+  font-feature-settings: "sups"
+}
+
+.sinf{
+  font-feature-settings: "sinf"
+}
+
+.c2sc{
+  font-feature-settings: "c2sc"
+}
+
+.smcp{
+  font-feature-settings: "smcp"
+}
+
+
