--- a/templates/family.html
+++ b/templates/family.html
@@ -85,12 +85,14 @@
 
 <!-- Hero Image -->
 <section class="hero-image">
-    <img src="https://upgrade.typenetwork.com/images/glyphsbyweights.png" alt="Image 1" class="hero-image-img">
+    <img src="https://cms.typenetwork.com/media/original_images/UpgradeReleaseLede02_5TdLdy6.svg" alt="Image 1" class="hero-image-img">
+<!-- 
     <div class="hero-overlay">
         <h1 class="heading">Welkom op onze website!</h1>
         <p class="text">Ontdek de mooiste visualisaties en content hier.</p>
         <a href="#" class="cta-btn">Leer Meer</a>
     </div>
+-->    
 </section>
 
 <nav class="navbar">
@@ -103,128 +105,67 @@
 </nav>
 
 <!-- Two Columns (70%, 30%) -->
-<h2 id="axes" class="section-header">Styles & axes</h2>
-<section class="two-columns-70">
-    <div class="column">
-        <h2 class="heading">Titel van de Eerste Kolom</h2>
+    <div class="headerBox">
+        <h2 id="axes" class="section-header">Styles & axes</h2>
+        <h3 id="Features" class="sub-header">Supporting a variety of related styles</h3>
+    </div>
+    <section class="two-columns-70">
+    <div class="column big">
+        <h2 class="heading">Gerrit Noordzij’s cube</h2>
         <p class="text">Gerrit Noordzij’s cube is based on a merger of expansion contrast (sharp-nib pencil) and translation contrast (broad-nib pencil). The type of contrast used in Upgrade is based on translation, with little difference between vertical thick and horizontal thin strokes. The animation (based on software by Just van Rossum’s Daily Drawbot) shows where the contrast principle of Upgrade is located in Noordzij’s cube. Upgrade styles shown in this example are Light, Book, Regular, Semibold, and Black.</p>
     </div>
-    <div class="column">
+    <div class="column small">
         <img src="https://upgrade.typenetwork.com/images/NoordzijCube-test-x-1000MMTranspUpgrade.gif" alt="Image 1">
     </div>
 </section>
 
-<!-- Three Columns (30%, 30%, 30%) -->
-<h2 id="Features" class="section-header">Upgrade features</h2>
-<h3 id="Features" class="sub-header">The Upgrade family implements an extended OpenType feature set</h3>
-<section class="three-columns">
-    <div class="column">
-        <h2 class="heading">CSS ligatures [liga]</h2>
-        <p class="text def">file, fjord, flow, loft</p>
-        <p class="text liga">file, fjord, flow, loft</p>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS fractions [frac]</h2>
-        <p class="text def">1/2 1/3 1/4 1/5 234/567</p>
-        <p class="text frac">1/2 1/3 1/4 1/5 234/567</p>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS tabular figures [tnum]</h2>
-        <p class="text def">0123456789</p>
-        <p class="text tnum">0123456789</p>
-    </div>
-</section>
-<section class="three-columns">
-    <div class="column">
-        <h2 class="heading">CSS oldstyle figures [onum]</h2>
-        <p class="text def">0123456789</p>
-        <p class="text onum">0123456789</p>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS superior figures [sups]</h2>
-        <p class="text def">0123456789</p>
-        <p class="text sups">0123456789</p>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS inferior figures [sinf]</h2>
-        <p class="text def">0123456789</p>
-        <p class="text sinf">0123456789</p>
-    </div>
-</section>
-<section class="three-columns">
-    <div class="column">
-        <h2 class="heading">CSS superior lowercase [sups]</h2>
-        <p class="text def">AaBbCcDdEeFfGgHhIiJj</p>
-        <p class="text sups">AaBbCcDdEeFfGgHhIiJj</p>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS inferior lowercase [sinf]</h2>
-        <p class="text def">AaBbCcDdEeFfGgHhIiJj</p>
-        <p class="text sinf">AaBbCcDdEeFfGgHhIiJ.</p>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS caps to small caps [c2sc]</h2>
-        <p class="text def">Design is detail management</p>
-        <p class="text c2sc">Design is detail management</p>
-    </div>
-</section>
-<section class="three-columns">
-    <div class="column">
-        <h2 class="heading">CSS lowercase to small caps [smcp]</h2>
-        <p class="text def">Design is detail management</p>
-        <p class="text smcp">Design is detail management</p>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS caps to small caps [c2sc] + [smcp]</h2>
-        <p class="text def">Design is detail management</p>
-        <p class="text c2sc smcp">Design is detail management</p>
-    </div>
-</section>
 <!-- Container Grid (vierkant masker) -->
-<h2 id="grid" class="section-header">Usage</h2>
-<section class="container-grid square">
+<section id="grid" class="container-grid square">
     <div class="grid-item">
         <div class="image-overlay">
-            <img src="https://upgrade.typenetwork.com/images/glyphsbyweights.png" alt="Image 1">
-            <div class="overlay-text">Tekst Overlay 1</div>
+            <img src="./images/2022/Presti_in_use_02.jpg" alt="Image 1">
         </div>
     </div>
     <div class="grid-item">
         <div class="image-overlay">
-            <img src="https://upgrade.typenetwork.com/images/glyphsbyweights.png" alt="Image 2">
-            <div class="overlay-text">Tekst Overlay 2</div>
+            <img src="./images/2022/Presti_in_use_pure_care_02.jpg" alt="Image 1">
         </div>
     </div>
     <div class="grid-item">
         <div class="image-overlay">
-            <img src="https://upgrade.typenetwork.com/images/glyphsbyweights.png" alt="Image 3">
-            <div class="overlay-text">Tekst Overlay 3</div>
+            <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg" alt="Image 1">
         </div>
     </div>
 </section>
 <section class="container-grid square">
     <div class="grid-item">
         <div class="image-overlay">
-            <img src="https://upgrade.typenetwork.com/images/glyphsbyweights.png" alt="Image 1">
-            <div class="overlay-text">Tekst Overlay 1</div>
+            <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg" alt="Image 1">
         </div>
     </div>
     <div class="grid-item">
         <div class="image-overlay">
-            <img src="https://upgrade.typenetwork.com/images/glyphsbyweights.png" alt="Image 2">
-            <div class="overlay-text">Tekst Overlay 2</div>
+            <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg" alt="Image 1">
         </div>
     </div>
     <div class="grid-item">
         <div class="image-overlay">
-            <img src="https://upgrade.typenetwork.com/images/glyphsbyweights.png" alt="Image 3">
-            <div class="overlay-text">Tekst Overlay 3</div>
+            <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg" alt="Image 1">
         </div>
     </div>
 </section>
 
+<section class="two-columns-70">
+    <div class="column small">
+        <img src="https://upgrade.typenetwork.com/images/glyphsbyweights.png" alt="Image 1">
+    </div>
+    <div class="column big">
+        <h2 class="heading">Different drawings for different weights</h2>
+        <p class="text">Depending on the available space of stems and counters in the various weights, some characters have different drawings. There is no room for the vertical bar in the dollar and cent symbols to strike completely through. Note that although all weights are shown here (ranging from Hairline to UltraBlack), details in the extreme weights may not make them ideal candidates for use in this size.</p>
+    </div>
+</section>
+
 <!-- Cijferblok (horizontale lijst) -->
-<h2 id="stats" class="section-header">Stats</h2>
 <section class="number-block">
     <div class="number-item">
         <h3 class="number-header">Aantal Verkopen</h3>
@@ -248,15 +189,79 @@
     </div>
 </section>
 
-
-    {{page.familyInfo(page.slug, imageRight=False, typeTester=True)}}
-    {{page.familyInfo(page.slug, typeTester=True, style='Medium')}}
-    
-    {{page.familyInfo(page.slug, imageRight=False, typeTester=True)}}
-    {{page.familyInfo(page.slug, typeTester=True)}}
-
-    {{page.getFooter()}}
-
+<!-- Three Columns (30%, 30%, 30%) -->
+<div class="headerBox">
+  <h2 id="Features" class="section-header">Upgrade features</h2>
+  <h3 id="Features" class="sub-header">The Upgrade family implements an extended OpenType feature set</h3>
+</div>
+<section class="three-columns">
+    <div class="column">
+        <h2 class="heading">CSS ligatures [liga]</h2>
+        <h3 class="def">file, fjord, flow, loft</h3>
+        <h3 class="liga">file, fjord, flow, loft</h3>
+    </div>
+    <div class="column">
+        <h2 class="heading">CSS fractions [frac]</h2>
+        <h3 class="def">1/2 1/3 1/4 1/5 234/567</h3>
+        <h3 class="frac">1/2 1/3 1/4 1/5 234/567</h3>
+    </div>
+    <div class="column">
+        <h2 class="heading">CSS tabular figures [tnum]</h2>
+        <h3 class="def">0123456789</h3>
+        <h3 class="tnum">0123456789</h3>
+    </div>
+</section>
+<section class="three-columns">
+    <div class="column">
+        <h2 class="heading">CSS oldstyle figures [onum]</h2>
+        <h3 class="def">0123456789</h3>
+        <h3 class="onum">0123456789</h3>
+    </div>
+    <div class="column">
+        <h2 class="heading">CSS superior figures [sups]</h2>
+        <h3 class="def">0123456789</h3>
+        <h3 class="sups">0123456789</h3>
+    </div>
+    <div class="column">
+        <h2 class="heading">CSS inferior figures [sinf]</h2>
+        <h3 class="def">0123456789</h3>
+        <h3 class="sinf">0123456789</h3>
+    </div>
+</section>
+<section class="three-columns">
+    <div class="column">
+        <h2 class="heading">CSS superior lowercase [sups]</h2>
+        <h3 class="def">AaBbCcDdEeFfGgHhIiJj</h3>
+        <h3 class="sups">AaBbCcDdEeFfGgHhIiJj</h3>
+    </div>
+    <div class="column">
+        <h2 class="heading">CSS inferior lowercase [sinf]</h2>
+        <h3 class="def">AaBbCcDdEeFfGgHhIiJj</h3>
+        <h3 class="sinf">AaBbCcDdEeFfGgHhIiJ.</h3>
+    </div>
+    <div class="column">
+        <h2 class="heading">CSS caps to small caps [c2sc]</h2>
+        <h3 class="def">Design is detail management</h3>
+        <h3 class="c2sc">Design is detail management</h3>
+    </div>
+</section>
+<section class="three-columns">
+    <div class="column">
+        <h2 class="heading">CSS lowercase to small caps [smcp]</h2>
+        <h3 class="def">Design is detail management</h3>
+        <h3 class="smcp">Design is detail management</h3>
+    </div>
+    <div class="column">
+        <h2 class="heading">CSS caps to small caps [c2sc] + [smcp]</h2>
+        <h3 class="def">Design is detail management</h3>
+        <h3 class="c2sc smcp">Design is detail management</h3>
+    </div>
+    <div class="column">
+        <h2 class="heading">CSS slashed zero [zero]</h2>
+        <h3 class="def">€ 12.000.000</h3>
+        <h3 class="zero">€ 12.000.000</h3>
+    </div>
+</section>
 </body>
 
 <script>
